# git-tutorial

./: CMakeCache.txt  CMakeLists.txt  Hello.c  README.md
src/: Hello.c  Hello.patch  main.c
